-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
As of v6.8-rc6:
strscpy>
Linux commit v6.7-11707-gd26270061ae6
string: Remove strlcpy()
strlcpy() is removed, use strscpy() and provide a strscpy()
for kernels that do not have one.
CPUHP_LUSTRE_CFS_DEAD>
Linux commit v4.9-12227-g7b737965b331 introduced
staging/lustre/libcfs: Convert to hotplug state machine
Which introduced: CPUHP_LUSTRE_CFS_DEAD
Linux commit v4.10-rc1-5-g4205e4786d0b
cpu/hotplug: Provide dynamic range for prepare stage
Which introduced: CPUHP_BP_PREPARE_DYN
Linux commit v6.7-rc2-1-g15bece7bec0d
cpu/hotplug: Remove unused CPU hotplug states
Which removed: CPUHP_LUSTRE_CFS_DEAD
Given that there are no distro kernels between 4.10 and 4.11
just use CPUHP_BP_PREPARE_DYN instead.
dentry.d_children/d_sibs>
Linux commit v6.7-rc1-3-gda549bdd15c2
dentry: switch the lists of children to hlist
-Werror=missing-prototypes>
Linux commit v6.8-rc1-1-g113a61863ecb>
Makefile: Enable -Wstringop-overflow globally
Remove some unused functions and move some prototypes to headers
generic_error_remove_folio>
Linux commit v6.7-rc4-79-gaf7628d6ec19
fs: convert error_remove_page to error_remove_folio